Mejorando redacción y acomodando contenidos | DB

--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -2,25 +2,24 @@ Una ***base de datos*** es una colección de datos, que poseen cierta relación 
 Un ***sistema de gestión de bases de datos (SGBD)*** es una colección de programas que permiten a los usuarios crear y mantener una base de datos. El objetivo principal de estos sistemas es proporcionar una forma de *almacenar* y *recuperar* la información de una base de datos de manera *práctica* y *eficiente*.
 ## Propósitos de los Sistemas de Bases de Datos
 Los sistemas de bases de datos surgieron en respuesta a los primeros métodos de gestión informatizada de los datos comerciales. Antes de la incorporación de las bases de datos, la forma más habitual de persistir los datos era almacenarlos en archivos del sistema operativo. La forma en la que los sistemas accedían y manipulaban datos era a través de un conjunto de aplicaciones creadas específicamente para ese propósito.
-Esto problemas adicionales ante el surgimiento de nuevos requerimientos o la modificación del sistema actual, dado que la mayoría de los casos eso requería agregar nuevos datos, por ende nuevos archivos y nuevas aplicaciones para la manipulación de los mismos.
+Este tipo de soluciones generaba problemas adicionales ante el surgimiento de nuevos requerimientos o la modificación del sistema actual, dado que la mayoría de los casos eso requería agregar nuevos datos, por ende nuevos archivos y aplicaciones para la manipulación de los mismos.
 Los sistemas de bases de datos ofrecen soluciones a los siguientes problemas de los sistemas de archivos convencionales:
 1. **Redundancia e inconsistencia de datos**: En los sistemas de archivos convencionales, es común que la misma información se almacene en múltiples lugares causando una redundancia de datos. Esto puede llevar a diferencias entre estos datos, causando una inconsistencia si no se actualizan simultáneamente. Los SGBD manejan esta problemática mediante la centralización de los datos y ofreciendo mecanismos para asegurar que todos los cambios se reflejen en toda la base, manteniendo la consistencia.
 2. **Dificultad en acceder a los datos**: Sin un SGBD, cada vez que se necesite una consulta específica, puede ser necesario desarrollar una aplicación o script específico. Esto hace que el acceso a los datos sea laborioso. Los SGBD ofrecen lenguajes de consulta que permiten a los usuarios recuperar y manipular datos de manera eficiente y sin necesidad de programación específica para cada consulta.
 3. **Aislamiento de datos**: Los datos aislados en diferentes archivos y en formatos variados dificultan su gestión y acceso eficiente. Los SGBD reducen este problema al integrar todos los datos en una única estructura bien definida, facilitando su acceso y manejo.
 4. **Problemas de integridad**: En sistemas basados en archivos, las restricciones de integridad dependen a menudo del código de la aplicación, lo que puede ser ineficiente y propenso a errores. Los SGBD gestionan las restricciones de integridad a nivel de base de datos, permitiendo que sean consistentes y no dependan del código de aplicación individual, facilitando la implementación de nuevas reglas y la modificación de las existentes.
 5. **Problemas de atomicidad**: La atomicidad se refiere a la ejecución completa de todas las partes de una transacción. En sistemas sin un manejo adecuado, una falla podría dejar la base de datos en un estado inconsistente (por ejemplo, dinero retirado de una cuenta pero no depositado en otra). Los SGBD aseguran que las transacciones sean atómicas, es decir, que se completen en su totalidad o que no se realice ningún cambio.
-6. **Anomalías en el acceso concurrente**: El acceso concurrente es esencial para el rendimiento, pero puede causar problemas de integridad si no se maneja adecuadamente. Los SGBD implementan varios mecanismos de control de concurrencia, como bloqueos y versiones de timestamp, para asegurar que las transacciones concurrentes no interfieran incorrectamente entre sí.
+6. **Anomalías en el acceso concurrente**: El acceso concurrente es esencial para el rendimiento, pero puede causar problemas de integridad si no se maneja adecuadamente. Los SGBD implementan varios mecanismos de control de concurrencia, como bloqueos y estampilla de tiempo, para asegurar que las transacciones concurrentes no interfieran incorrectamente entre sí.
 7. **Problemas de seguridad**: La seguridad de los datos es crítica. Los sistemas basados en archivos pueden hacer que sea difícil restringir el acceso a los datos a nivel de usuario o de grupo. Los SGBD proporcionan sistemas sofisticados de control de acceso que permiten a los administradores configurar quién puede ver o modificar qué datos, en qué circunstancias.
 ## Visión de los Datos
-Una de las principales finalidades de los sistemas de bases de datos es ofrecer a los usuarios una visión *abstracta* de los datos. Es decir, el sistema oculta ciertos detalles del modo en que se almacenan y mantienen los datos.
-Los sistemas de gestión de bases de datos deben cumplir con las siguientes tres características:
+Una de las principales finalidades de los sistemas de bases de datos es ofrecer a los usuarios una visión *abstracta* de los datos. Es decir, el sistema oculta ciertos detalles del modo en que se almacenan y mantienen los datos. Los sistemas de gestión de bases de datos deben cumplir con las siguientes tres características:
 1. Separación entre los programas y los datos.
 2. Soporte de múltiples vistas o niveles de usuario.
 3. Utilizar un **diccionario de datos** para guardar la descripción o esquema de la base de datos.
 
 Para que el sistema sea útil debe recuperar los datos eficientemente. Esta preocupación ha conducido al diseño de estructuras de datos complejas para la representación de los datos en la base de datos.
 Estos sistemas de gestión debe proporcionar distintas visiones de los datos, puesto que muchos de estos usuarios que utilizan estos sistemas no están familiarizados con computadores, es por eso que los desarrolladores esconden la complejidad a los usuarios a través de varios niveles de abstracción para simplificar la interacción de los usuarios con el sistema.
-El objetivo final de este sistema multinivel es lograr la separación de las aplicaciones de usuario de las bases de datos físicas, es por eso que se describen los esquemas en tres niveles de abstracción:
+El objetivo final de este sistema multinivel es lograr la separación entre las aplicaciones y los usuarios de las bases de datos físicas, es por eso que se describen los esquemas en tres niveles de abstracción:
 1. **Nivel Físico (Interno)**: Es el nivel más bajo de abstracción y describe cómo se almacenan realmente los datos. Este nivel describe en detalle las estructuras de datos complejas de bajo nivel.
 2. **Nivel Lógico (Conceptual)**: El nivel inmediatamente superior de abstracción describe qué datos se almacenan en la base de datos y qué relaciones existen entre esos datos. Este nivel describe toda la base de datos en términos de un número pequeño de estructuras relativamente simples.
 3. **Nivel de Vistas (Externo)**: El nivel más elevado de abstracción solo describe parte de la base de datos. Este nivel de abstracción surge de la necesidad de los usuarios por acceder solo a una parte específica de los datos y no a la totalidad de estos mismos, simplificando en cierto modo la interacción con el sistema.
@@ -30,8 +29,7 @@ El objetivo final de este sistema multinivel es lograr la separación de las apl
 >- **Independencia Física de los Datos**: Es la capacidad de modificar el esquema físico sin tener que alterar el esquema conceptual ni externo.
 >- **Independencia Lógica de los Datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación. Este nivel de independencia es el más díficil de lograr.
 ### Modelos de Datos
-En el área de las bases de datos existe una colección de herramientas conceptuales que se utilizan para describir los datos, las relaciones, la semántica y las restricciones de integridad.
-Existen diferentes modelos de datos, los cuales pueden ser agrupados en distintas categorías:
+En el área de las bases de datos existe una colección de herramientas conceptuales que se utilizan para describir los datos, las relaciones, la semántica y las restricciones de integridad. Los diferentes modelos de datos existentes, pueden ser agrupados en distintas categorías:
 - **Modelos de Datos de Alto Nivel o Conceptuales**: Estos modelos están diseñados para ser abstractos y generales, enfocados en cómo la mayoría de los usuarios entienden los datos. Usan conceptos como entidades, atributos y relaciones que reflejan la realidad del dominio del problema de forma intuitiva.
 - **Modelos de Datos de Bajo Nivel o Físico**: Estos modelos proporcionan una visión detallada de cómo los datos se organizan físicamente en el sistema de almacenamiento. Incluyen detalles como estructuras de almacenamiento específicas, índices, caminos de acceso a los datos y optimización del rendimiento. Son esenciales para los administradores de bases de datos y los diseñadores de sistemas, ya que afectan directamente el rendimiento y la eficiencia del almacenamiento de datos.
 - **Modelos de Datos de Representación o Implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales, pero que también ofrecen una representación más cercana a cómo los datos se organizan en la base de datos.
@@ -51,9 +49,9 @@ Los ***lenguajes de manipulación de datos (LMD)*** permiten a los usuarios tene
 - Modificación de datos almacenados en la base de datos.
 
 >[!tldr] Clasificación de los Lenguajes de Manipulación de Datos
->Los lenguajes de manipulación de datos se pueden clasificar en dos grandes grupos, los procedimentales y los declarativos. Los primeros necesitan que el usuario especifique que datos se necesitan y como ebtener estos datos. Mientras en los segundos el usuario solo debe especificar que datos se necesitan sin nececidad de especificar como se obtienen dichos datos.
+>Los lenguajes de manipulación de datos se pueden clasificar en dos grandes grupos, los procedimentales y los declarativos. Los primeros necesitan que el usuario especifique que datos se necesitan y como obtener estos datos. Mientras en los segundos el usuario solo debe especificar que datos se necesitan sin necesidad de especificar como se obtienen dichos datos.
 
-Una ***consulta*** es una instrucción que solicita que se recupere información. La parte de los LMDs implicada en la recuperación de información se denomina *lenguaje de consultas*. Aunque técnicamente sea incorrecto, resulta habitual usar las expresiones lenguaje de consultas y lenguaje de manipulación de datos como sinónimas.
+Una ***consulta*** es una instrucción que solicita la recuperación de información. La parte de los LMDs implicada en la recuperación de información se denomina *lenguaje de consultas*. Aunque técnicamente sea incorrecto, resulta habitual usar las expresiones lenguaje de consultas y lenguaje de manipulación de datos como sinónimas.
 ### Lenguaje de Definición de Datos
 Los ***lenguajes de definición de datos (LDD)*** permiten a los usuarios definir el esquema de la base de datos, además de permitir especificar más propiedades para los datos manipulados por el sistema.
 La estructura de almacenamiento y los métodos de acceso usados por el sistema de bases de datos se especifican mediante un conjunto de instrucciones en un tipo especial de LDD denominado *lenguaje de almacenamiento y definición de datos*. Estas instrucciones definen los detalles de implementación de los esquemas de las bases de datos, que suelen ocultarse a los usuarios.
