--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -6,13 +6,13 @@ Ya sea en la especialización o generalización, los conjuntos de entidades de m
 >[!tldr] Diferencias entre Especialización y Generalización
 >Especialización y generalización son simples invenciones, estas son representadas en un diagrama E-R de la misma forma, a través de un triángulo invertido. La diferencia entre ambos radica en la forma de establecer la relación entre los distintos niveles de entidades.
 ### Diseño de Restricciones en las Generalizaciones y Especializaciones
-1. **Restricciones por Membresía de Entidad**: Restricciones que establecen qué entidades pueden ser miembro de un nivel dado de un conjunto de entidades.
-	- **Definido por condición**: La pertenencia de una entidad en un conjunto específico está determinada por una condición predefinida. Por ejemplo, en el caso de "*tipo-cuenta = 'cuenta corriente*'", todas las entidades que cumplen con esta condición serán automáticamente clasificadas dentro del conjunto "cuenta-corriente".
+1. **Restricciones de pertenencia**: Restricciones que establecen qué entidades pueden ser miembro de un nivel dado de un conjunto de entidades.
+	- **Definido por condición**: La pertenencia de una entidad en un conjunto específico está determinada por una condición predefinida. Por ejemplo, en el caso de “*tipo-cuenta = ‘cuenta corriente*’”, todas las entidades que cumplen con esta condición serán automáticamente clasificadas dentro del conjunto “cuenta-corriente”.
 	- **Definidos por el usuario**: Es el usuario quien asigna manualmente las entidades a un conjunto específico. Por ejemplo, un administrador de base de datos puede asignar empleados a diferentes grupos de trabajo según criterios que pueden no estar explícitamente definidos por los datos mismos.
-2. **Restricciones de Generalización Simple**: Restricciones que definen si las entidades pueden pertenecer a más de un conjunto de entidades de nivel más bajo en una generalización simple.
+2. **Restricciones de generalización simple**: Restricciones que definen si las entidades pueden pertenecer a más de un conjunto de entidades de nivel más bajo en una generalización simple.
 	- **Disjuntos**: Una entidad pertenece solo y únicamente a un conjunto entidad de nivel más bajo.
 	- **Solapados**: Una entidad puede pertenecer a más de un conjunto entidad de nivel más bajo.
-3. **Restricción de Completitud**: Restricciones que especifican si cada entidad de nivel superior debe o no pertenecer al menos a uno de los conjuntos de entidades de nivel más bajo.
+3. **Restricción de completitud**: Restricciones que especifican si cada entidad de nivel superior debe o no pertenecer al menos a uno de los conjuntos de entidades de nivel más bajo.
 	- **Total**: Cada entidad de nivel más alto debe pertenecer obligatoriamente a un conjunto de entidades de nivel más bajo.
 	- **Parcial**: Algunas entidades de nivel más alto pueden no pertenecer a algún conjunto de entidades de nivel más bajo.
 ## Agregación
@@ -21,13 +21,13 @@ La agregación se utiliza para modelar una relación entre relaciones, es decir,
 
 En este caso un empleado trabaja en un trabajo en particular, en una sucursal particular, la agregación nos permite tener asociado un director a esta relación ternaria.
 ## Decisiones de Diseño Entidad-Relación
-A la hora de realizar el diseño del modelo de datos de un sistema surgen una serie de cuestiones que son tenidas en cuanta no solo durante el diseño sino también a la hora de la implementación, aunque todo esto en última instancia va a depender del caso particular que se esté modelando. Dentro de esas cuestiones de diseño nos encontramos lo siguiente
-1. Utilizar un atributo o un conjunto de entidades para representar un objeto. Por ejemplo, los números de teléfono de una persona, en caso de ser un atributo, este podría ser multivalorado, un atributo compuesto o incluso ambos. Sin embargo, si el objeto por sí mismo tiene relaciones con otros conjuntos de entidades, este debe representarse como una entidad.
+A la hora de diseñar el modelo de datos de un sistema surgen una serie de cuestiones que son tenidas en cuanta no solo durante el diseño sino también a la hora de la implementación, aunque todo esto en última instancia va a depender del caso particular que se esté modelando. Dentro de esas cuestiones de diseño nos encontramos lo siguiente:
+1. Utilizar un atributo o un conjunto de entidades para representar un objeto. Por ejemplo, los números de teléfono de una persona, en caso de ser un atributo, este podría ser multivalorados, un atributo compuesto o incluso ambos. Sin embargo, si el objeto por sí mismo tiene relaciones con otros conjuntos de entidades, este debe representarse como una entidad.
 2. Si una situación puede expresarse más exactamente mediante un conjunto de entidades o mediante un conjunto de relaciones. Recordar que, en los conjuntos de relaciones, cada relación queda identificada unívocamente por las claves de los conjuntos de entidades que participan en la misma.
 3. Si se usa una relación ternaria o si esta se transforma en un par de relaciones binarias. Existen formas de traducir relaciones n-arias en binarias, si bien esto se suele hacer, no es recomendable, ya que siempre se busca representar las situaciones de la forma más acercada a la realidad.
-4. Si se usa un **conjunto de entidades débiles** o un **conjunto de entidades fuertes**. Un CEF y sus CED dependientes se pueden considerar como un «objeto» en la base de datos, debido a que la existencia de las entidades débiles depende de las entidades fuertes.
+4. Si se usa un **conjunto de entidades débiles** o un **conjunto de entidades fuertes**. Un CEF y sus CED dependientes se pueden considerar como un objeto en la base de datos, debido a que la existencia de las entidades débiles depende de las entidades fuertes.
 	- Si se tomó como parte de un único objeto, puede generar redundancia. Por ejemplo, en Factura-Items, los datos de la factura se repetirían para cada ítem.
-	- Se puede optar por generar claves para las entidades débiles. Por ejemplo: estudios y series de exámenes. Un estudio tiene varios exámenes. Si el número de exámenes es único, sería una relación muchos a uno entre dos conjuntos de entidades fuertes.
+	- Se puede optar por generar claves para las entidades débiles. Por ejemplo, para el caso de estudios y series de exámenes. Un estudio tiene varios exámenes. Si el número de exámenes es único, sería una relación muchos a uno entre dos conjuntos de entidades fuertes.
 5. Si el uso de la generalización es apropiado. La generalización, o una jerarquía de relaciones *ES*, contribuye a la modularidad por permitir que los atributos comunes de conjuntos de entidades similares se representen en un único lugar en un diagrama E-R.
 6. Si el uso de la agregación es apropiado. La agregación agrupa una parte de un diagrama E-R en un único conjunto de entidades, permitiendo tratar el conjunto de entidades de la agregación como una unidad única sin importar los detalles de su estructura interna.
 
