--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -1,6 +1,6 @@
 La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un esquema conceptual de la base de datos.
-La **fase de diseño lógico** es donde se desarrolla un modelo abstracto de la información requerida por el negocio, basado en los requisitos recolectados durante la fase de análisis de requisitos. Este diseño no considera las limitaciones de ningún sistema de gestión de bases de datos específico.
-En la **fase de diseño físico**, el modelo lógico se traduce en un modelo que puede ser implementado físicamente en un sistema de gestión de bases de datos específico. Esto incluyen la forma en la que se organizan los datos físicamente, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
+En la **fase de diseño lógico** se desarrolla un modelo abstracto de la información requerida por el negocio, basado en los requisitos recolectados durante la fase de análisis de requisitos. Este diseño no considera las limitaciones de ningún sistema de gestión de bases de datos específico.
+Durante la **fase de diseño físico**, el modelo lógico se traduce en un modelo que puede ser implementado físicamente en un sistema de gestión de bases de datos específico. Esto incluyen la forma en la que se organizan los datos físicamente, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
 ## Mapeo del Esquema Entidad-Relación Extendido a Tablas
 Una base de datos conformada por un diagrama Entidad-Relación se puede representar como una colección de tablas. Por cada conjunto entidad y conjunto relación, existe una única tabla a la que se le asigna el nombre de conjunto entidad o relación, cada tabla tiene $n$ cantidad de columnas con nombres únicos, generalmente correspondiente a los atributos.
 La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional.
@@ -15,23 +15,23 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 >$$
 >I \{K_P \in CED\} \cup D \rightarrow \text{Incluidos en la tabla del CED}
 >$$
->Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación. Esto es así, ya que el conjunto de entidades débiles tiene en su tabla un atributo que hace referencia a la clave primaria de el conjunto de entidades propietarias. 
+>Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para dicha relación. Esto es así, ya que el conjunto de entidades débiles tiene en su tabla un atributo que hace referencia a la clave primaria de el conjunto de entidades propietarias. 
 
 - Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, contendrá una columna extra para la *clave primaria* de la entidad fuerte que lo identifica.
-- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de los conjuntos de entidades $A$, $B$ y $C$ respectivamente.
-- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación y los atributos propios de la relación si es que esta posee atributos.
+- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo que forme parte de su relación, tal que $R \{a_1, \dots , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de los conjuntos de entidades $A$, $B$ y $C$ respectivamente.
+- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de los conjuntos de entidades participantes de dicha relación y los atributos propios de la relación si es que esta posee alguno.
 - Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad un atributo extra que representaría la clave primaria de la entidad con la que se está relacionando.
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos los atributos correspondientes de cada conjunto de entidades. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se esta relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la reglas de normalización que apliquemos.
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos los atributos correspondientes de cada conjunto de entidades. Una de esas tablas tendrá un atributo más que será la clave primaria del otro conjunto de entidades con el que se está relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de las reglas de normalización que apliquemos.
 
 ![[uno-uno-total.png]]
 
 - Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo compuesto, es decir, cada componente del atributo se representa como una columna de la tabla.
 - Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno sus atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
 - Para las relaciones recursivas, es decir, aquellos conjuntos de entidades que tengan una relación consigo mismo, se las va a representar de formas diferentes de acuerdo a la cardinalidad de su relación.
-	- Si la relación es de uno a varios, se puede agregar un atributo más a la tabla que haga referencia, mediante su clave primaria, a otra fila de la misma tabla. Por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
+	- Si la relación es de uno a varios, se puede agregar un atributo más a la tabla que haga referencia, mediante su clave primaria, a otra fila de la misma tabla. Por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo *jefe* a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
 	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y las claves primarias de ambas entidades relacionadas.
 #### Representación de la Generalización y Especialización
 Para representar en forma de tablas tanto la generalización como la especialización existen dos formas, cada una con sus ventajas y desventajas
@@ -42,7 +42,7 @@ Para representar en forma de tablas tanto la generalización como la especializa
 	- **Ventajas**: Se tiene todos los datos de la entidad en una sola tabla.
 	- **Desventajas**: Los atributos se almacenan de forma redundante para cada una de las subclases.
 
-En aspectos generales, el primer método es más apropiado para casos de generalización solapada, para evitar redundancias. Por Ej.: el caso de personas con sus entidades de nivel inferior, clientes, empleados y gerente. Mientras que el segundo método es más apropiado para casos de generalización disjunta, sobre todo, si es total. Por Ej.: el caso de las cuentas bancarias, que pueden ser caja de ahorro, cuenta corriente, entre otras.
+En aspectos generales, el primer método es más apropiado para casos de generalización solapada, para evitar redundancias. Por ejemplo, el caso de personas con sus entidades de nivel inferior, clientes, empleados y gerente. Mientras que el segundo método es más apropiado para casos de generalización disjunta, sobre todo, si es total. Por ejemplo, el caso de las cuentas bancarias, que pueden ser caja de ahorro, cuenta corriente, entre otras.
 #### Representación de la Agregación
 Recordemos que la agregación nos permite tratar a una relación como si fuera una entidad, permitiendo tener relaciones con otras entidades, la forma de pasar a tablas a la agregación varía de acuerdo a la cardinalidad de la relación.
 - Si la relación es de uno a varios o viceversa, el pasaje se hará de manera similar a la de una relación uno a varios entre dos conjuntos de entidades, con la diferencia que en este caso se deberá agregar un atributo más a la tabla que representa a la relación.
