--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -1,5 +1,6 @@
 El **modelo relacional** fue introducido en 1970 por el matemático Edgar D. Codd, y debido a su simplicidad, la posibilidad de poder realizar consultas de manera declarativa y su fundamento matemático tuvo una amplia difusión.
-En este modelo se representa a las Bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre, el conjunto de valores permitidos para cada uno de estos atributos recibe el nombre de ***dominio***. Los valores para los atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación e $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
+En este modelo se representa a las bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre y un ***dominio***, es decir, un conjunto de valores válidos permitidos.
+Los valores para los atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación y $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
 En este contexto la información se divide en partes, donde cada una de esas partes almacena parte de la información, esto se hace porque de esta forma evitamos la repetición de la información y el uso excesivo de los valores nulos, los cuales suelen causar muchos problemas.
 ## Lenguajes de Consultas
 Los lenguajes de consultas son lenguajes con los cuales los usuarios solicitan información a la base de datos, estos lenguajes pueden ser ***procedimentales*** o ***declarativos***. Los lenguajes puros proveen una base sólida para los lenguajes de consulta comerciales utilizados por las bases de datos, dentro de estos lenguajes puros encontramos:
@@ -7,7 +8,7 @@ Los lenguajes de consultas son lenguajes con los cuales los usuarios solicitan i
 - Cálculo Relacional de Tuplas.
 - Cálculo Relacional de Dominios.
 ### Álgebra Relacional
-Es un lenguaje procedimental, en el sentido de que se tiene que expresar todas las operaciones a realizar. Cuenta con 6 operadores básicos, los cuales son suficientes para expresar cualquier consulta del álgebra relacional, estas operaciones son:
+Es un lenguaje procedimental, en el sentido de que se tiene que expresar todas las operaciones a realizar. Cuenta con seis operadores básicos, los cuales son suficientes para expresar cualquier tipo de consulta que se desee, estas operaciones son:
 - **Selección**. Formalmente denotado como $\sigma_p(r)$, donde $p$ es un predicado, es decir, una fórmula que se emplea en el cálculo proposicional, que consiste en términos conectados con operadores lógicos y aritméticos. Se define como:
 $$
 \sigma_p(r) = \{t |t \in r \land p(t) \}
@@ -24,7 +25,7 @@ $$
 $$
 r\times s = \{tq|t \in r \land q \in s\}
 $$
-- **Renombramiento**. Formalmente denotada como $\rho_x(E)$, donde $E$ es una expresión del álgebra relacional y $x$ el nuevo nombre que hace referencia a esa relación. Nos permite *nombrar* resultados de operaciones en álgebra relacional, por lo tanto, nos permite referenciarlas, permitiendo referenciar una relación a través de múltiples nombres.
+- **Renombramiento**. Formalmente denotada como $\rho_x(E)$, donde $E$ es una expresión del álgebra relacional y $x$ el nuevo nombre que hace referencia a esa relación. Nos permite *nombrar* resultados de operaciones en álgebra relacional, por lo tanto, nos permite referenciar una relación a través de múltiples nombres.
 
 >[!tldr] Renombramiento de Atributos en una Relación
 >También está permitido el renombramiento de atributos de una relación producida por una expresión, supongamos que tenemos una expresión $E$ del álgebra relacional con una aridad $n$, en ese caso:
@@ -46,7 +47,7 @@ $$
  - **División**. Formalmente denotado como $r \div s$, donde $r$ y $s$ son relaciones. Resulta adecuado a la hora de realizar consultas del tipo "*todos los*", por ejemplo, sea $r(R)$ y $s(S)$ relaciones y $S \subseteq R$, el resultado de $r \div s$ es una relación sobre el esquema $R - S$.
 - **Asignación**. Formalmente denotada como $\leftarrow$, es una consulta que resulta conveniente para realizar consultas complejas. Permite escribir una expresión del álgebra relacional por partes utilizando la asignación a una variable de relación temporal, la cual puede utilizarse para expresiones posteriores.
 #### Álgebra Relacional Extendida
-Con el paso del tiempo se le fue agregando mucho mayores funcionalidades y propiedades al álgebra relacional, aunque este tipo de operaciones no forman parte del estándar. 
+Con el paso del tiempo se le fue agregando mayores funcionalidades y propiedades al álgebra relacional, aunque este tipo de operaciones no forman parte del estándar. 
 - **Proyección Generalizada**. Amplía la operación proyección, permitiendo que se utilicen *funciones aritméticas* en la lista de proyección, redefiniéndola como:
 $$
 \varPi_{F^1, F^2, \dots, F^n}(E)
@@ -59,12 +60,14 @@ G_1, G_2, \dots, G_n \ g \ F_1(A_1), F_2(A_2), \dots F_i(A_i) \Large (E)
 $$
 En donde $E$ es cualquier tipo de expresión del álgebra relacional, $G_1, G_2, \dots, G_n$ constituyen una lista de atributos que indican como se realizará la agrupación, $F_i$ es una función de agregación y $A_i$ es un nombre de atributo.
 
-- **Reuniones Externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen 3 tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
+- **Reuniones Externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen tres tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
 - **Borrar**. En el álgebra relacional, los borrados se expresan de la siguiente manera, $r \leftarrow r- E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Inserción**. En el álgebra relacional, las inserciones se expresan de la siguiente manera, $r \leftarrow r \cup E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
-- **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera -> $r \leftarrow \varPi_{F^1, F^2, \dots ,F^i}(r)$, donde cada $F_i$ representa una función que se aplica a cada i-ésimo atributo de $r$. En caso de que el atributo no se modifique solo se indica el atributo, pero en caso de que si se actualice se debe utilizar una expresión que implique constantes y los atributos de $r$.
+- **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera
+$$r \leftarrow \varPi_{F^1, F^2, \dots ,F^i}(r)$$
+Donde cada $F_i$ representa una función que se aplica a cada i-ésimo atributo de $r$. En caso de que el atributo no se modifique solo se indica el atributo, pero en caso de que si se actualice se debe utilizar una expresión que implique constantes y los atributos de $r$.
 ### Cálculo Relacional de Tuplas
-El cálculo relacional de tuplas, es un lenguaje de consulta ***declarativo***. Describe la información deseada sin dar un procedimiento específico para obtenerla. Las consultas en el cálculo relacional de tuplas se expresan como:
+El cálculo relacional de tuplas, es un lenguaje de consulta declarativo, en el cual se describe la información deseada sin especificar el procedimiento realizado para obtenerla. Las consultas en el cálculo relacional de tuplas se expresan como:
 $$
 \{t | P(t)\}
 $$
@@ -74,19 +77,18 @@ Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el pre
 - **Conjunto de conectores** ($\lor, \land, \neg$).
 - **Implicaciones** ($\Rightarrow$).
 - **Conjunto de cuantificadores**:
-	- $\exists \ t \in r(Q(t))$ -> Existe una tupla $t$ en la relación $r$ tal que el predicado $Q(t)$ es verdadero.
-	- $\forall \ t \in r(Q(t))$ -> $Q$ es verdadero para toda tupla $t$ en la relación $r$.
+	- $\exists \ t \in r(Q(t))$: Existe una tupla $t$ en la relación $r$ tal que el predicado $Q(t)$ es verdadero.
+	- $\forall \ t \in r(Q(t))$: $Q$ es verdadero para toda tupla $t$ en la relación $r$.
 
 Supongamos que queremos filtrar todas las tuplas de una relaciones que satisfagan una condición, por ejemplo, todos los préstamos superiores a los 1200 dólares, eso se conseguiría de la siguiente manera:
 $$
 \{t| t \in prestamo \ \land t[importe] > 1200\}
 $$
-Supóngase que sólo se desea obtener el atributo *numero_prestamo*, en vez de todos los atributos de la relación préstamo. Para escribir esta consulta en cálculo relacional de tuplas hay que incluir una expresión de relación sobre el esquema, quedándonos de la siguiente manera:
+Supóngase que solo se desea obtener el atributo *numero_prestamo*, en vez de todos los atributos de la relación préstamo. Para escribir esta consulta en cálculo relacional de tuplas hay que incluir una expresión de relación sobre el esquema, quedándonos de la siguiente manera:
 $$
 \{\ t \ | \ \exists s \in prestamo (t[numero\_prestamo] = s[numero\_prestamo] \land s[importe] > 1200)\}
 $$
-
-La variable tupla $t$ solo se define para el atributo numero_prestamo, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
+La variable tupla $t$ solo se define en términos del atributo *numero_prestamo*, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
 Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de "*Arganzuela*", eso se logra de la siguiente manera:
 $$
 \begin{align*}
@@ -102,21 +104,20 @@ Es un lenguaje de consulta declarativo, equivalente en poder al cálculo relacio
 $$
 \{<X_1, X_2, \dots X_n>| P(X_1, X_2, \dots X_n)\}
 $$
-En donde $X_1, X_2, \dots X_n$ representan a los atributos de las tuplas pertenecientes a una relación y $P$ es una fórmula similar a la del cálculo de predicados definido en el cálculo relacional de tuplas.
-Por cuestiones prácticas tomaremos los mismos ejemplos que dimos en el cálculo relacional de tuplas, pero esta vez escritas en esta notación.
+En donde $X_1, X_2, \dots X_n$ representan a los atributos de las tuplas pertenecientes a una relación y $P$ es una fórmula similar a la del cálculo de predicados definido en el cálculo relacional de tuplas. Por cuestiones prácticas tomaremos los mismos ejemplos dados para en el cálculo relacional de tuplas.
 Para determinar todos los préstamos que tienen un importe mayor a 1200 dorales, la petición se realizaría de la siguiente manera:
 $$
 \{<p,s,i>| <p,s,i> \in prestamo \land i > 1200\}
 $$
 En este caso del lado izquierdo expresamos todos los atributos de retorno, y del lado derecho todas las condiciones a cumplir, en caso de que solo queramos saber el número de los préstamos con monto superior a 1200 dólares, entonces la petición se haría de esta forma:
 $$
-\{<p>| \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
+\{<p>| \ \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
 $$
-Aunque la segunda consulta tenga un aspecto muy parecido al de la que se escribió para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$ restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
+Aunque la segunda consulta tenga un aspecto muy parecido a la presentada para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$, esto restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
 En caso de que queramos traer los nombres de todas las personas que tienen una cuenta en todas las sucursales de “*Arganzuela*”, lo haríamos de la siguiente manera:
 $$
 \begin{align*}
-\{<n> | \ \exists d,c(<n, d, c> \in cliente \land \forall \ x,y,z(<x,y,z> \in prestamo \land y = \text{"Arganzuela"} \Rightarrow \\
+\{<n> | \ \exists d,c(<n, d, c> \in cliente \land \forall x,y,z(<x,y,z> \in prestamo \land y = \text{"Arganzuela"} \Rightarrow \\
 \exists \ a,b (<a,x,b> \in cuenta \ \land <n, a> \in impositor))\}
 \end{align*}
 $$
