--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -1,7 +1,7 @@
 La estructura básica de una expresión SQL consiste en tres cláusulas: `SELECT`, `FROM` y `WHERE`, de la forma:
 ```sql
-SELECT A1, A2, ... , An
-	FROM R1, R2, ... ,Rm
+SELECT A1, A2,..., An
+	FROM R1, R2,..., Rm
 	WHERE P
 ```
 
@@ -9,11 +9,11 @@ Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ represen
 >[!caution] Sintaxis de las Consultas SQL
 >Existe un estándar que especifica todas las operaciones SQL y como es su sintaxis, pero cada implementador toma la decisión final de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias en las consultas entre bases de datos y otra, aunque estas suelen ser mínimas. Además puede que algunos implementadores decidan añadir cláusulas adicionales que faciliten algunas tareas en particular.
 
-- **SELECT**: Lista los atributos deseados en el resultado de una consulta, corresponde a la ***proyección*** del álgebra relacional.
+- `SELECT`: Lista los atributos deseados en el resultado de una consulta, corresponde a la ***proyección*** del álgebra relacional.
 	- Al contrario que en el álgebra relacional, SQL permite duplicados en las relaciones, esto es así debido a una cuestión de rendimiento y eficiencia, en caso de que deseemos eliminar duplicados debemos especificarlo explícitamente, utilizando la palabra `DISTINCT`.
-	- En caso de que se quiera seleccionar todos los atributos de los componentes de las tablas, se puede usar \*, en lugar de especificar todos los atributos de forma explícita.
+	- En caso de que se quiera seleccionar todos los atributos de los componentes de las tablas se puede usar $*$, en lugar de especificar todos los atributos de forma explícita.
 	- Al igual que en el cálculo relacional extendido, esta cláusula permite realizar operaciones aritméticas básicas entre constantes y/o distintos atributos.
-- **WHERE**: Especifica las condiciones que el resultado debe satisfacer, corresponde al ***predicado en la operación de selección*** del álgebra relacional.
+- `WHERE`: Especifica las condiciones que el resultado debe satisfacer, corresponde al ***predicado en la operación de selección*** del álgebra relacional.
 	- En esta cláusula se utilizan conectores lógicos como `and`, `or` y `not`.
 	- Permite usar operadores de comparación como >, <, =, entre otros. SQL permite utilizar estos operadores con distintos tipos de datos como cadenas de textos o incluso fechas.
 	- En esta cláusula se puede utilizar el operador especial `BETWEEN` para especificar intervalos de valores válidos. Este operador incluye ambos valores extremos del intervalo de valores especificados. Un ejemplo del uso de este operador es el siguiente:
@@ -23,7 +23,7 @@ SELECT num_prestamo
 	WHERE importe BETWEEN 90000 AND 100000
 ```
 
-- **FROM**: Lista las relaciones involucradas en la consulta. Define un producto cartesiano de las relaciones listadas.
+- `FROM`: Lista las relaciones involucradas en la consulta. Define un producto cartesiano de las relaciones listadas.
 	- Si en esta cláusula se colocan dos tablas que posean un atributo con el mismo nombre y se desea mostrar este en el resultado de la consulta, se debe especificar la tabla de la cual se utilizará el valor, de lo contrario ocurrirá un error, por ejemplo:
 ```sql
 SELECT nombre_cliente, prestatario.numero_prestamo, importe
@@ -31,7 +31,7 @@ SELECT nombre_cliente, prestatario.numero_prestamo, importe
 	WHERE prestatario.numero_prestamo = prestamo.numero_prestamo;
 ```
 
-- **ORDER BY**: Hace que las tuplas resultantes de una consulta se presenten en un cierto orden.
+- `ORDER BY`: Hace que las tuplas resultantes de una consulta se presenten en un cierto orden.
 	- Se puede incluir la cláusula `DESC` para ordenar los elementos de manera descendente y `ASC` para ordenarlos de manera ascendente. Ejemplo:
 ```sql
 -- Todos los clientes que tengan un prestamo en la
@@ -56,38 +56,39 @@ SELECT DISTINCT C.nombre_cliente
 >- $min(m, n)$ veces para la intersección.
 >- $max(0, m-n)$ en caso de la diferencia.
 
-- **Funciones de una Fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila. Algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras, estas funciones modifican los valores de las filas de manera independiente.
-- **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. SQL cuenta con 5 funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
+- **Funciones de una Fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila, algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras. Estas funciones modifican los valores de las filas de manera independiente.
+- **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. El estándar SQL define cinco funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
 	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo a los atributos especificados. Cuando se utiliza esta cláusula, el `SELECT` solo puede contener los atributos que aparecen en el `GROUP BY` o atributos calculados a partir de otros atributos.
 	- La cláusula `HAVING` te permite especificar predicados que deben ser evaluados luego de realizar el agrupamiento, ya que la cláusula `WHERE` siempre se aplica antes de realizar los agrupamientos, véase el ejemplo:
 ```sql
--- Lista a todas las sucursales cuyo saldo medio sea mayor a 1200 dolares
+-- Lista a todas las sucursales cuyo saldo medio sea mayor
+-- a 1200 dolares
 SELECT nombre_sucursal, AVG(saldo)
 	FROM cuenta
 	GROUP BY nombre_sucursal
 	HAVING AVG(saldo) > 1200
 ```
-### Valores Nulos
-SQL permite el uso de valores ***null*** para indicar la ausencia de información sobre el valor de un atributo. En un predicado se puede usar `IS NULL` para comprobar si un valor es nulo. Cualquier comparación que implique un valor nulo, SQL lo trata como desconocido o ***unknown***, es importante tener esto en cuenta debido a que estos valores puede repercutir en las operaciones que se realicen en las consultas.
+## Valores Nulos
+SQL utiliza valores ***null*** para indicar la ausencia de información sobre el valor de un atributo. Se utiliza la cláusula `IS NULL` para comprobar si un valor es nulo. Cualquier comparación que implique un valor nulo, SQL lo trata como desconocido o ***unknown***, es importante tener esto en cuenta debido a que estos valores puede repercutir en las operaciones que se realicen en las consultas.
 >[!tldr] Valores Desconocidos y Operadores Lógicos
 >Para cada uno de los operadores lógicos, los valores desconocidos pueden alterar el resultado de acuerdo a la operación realizada:
->- **OR**:
+>- `OR`:
 >	- (unknown or true) = true.
 >	- (unknown or false) = unknown.
 >	- (unknown or unknown) = unknown.
->- AND:
+>- `AND`:
 >	- (true and unknown) = unknown.
 >	- (false and unknown) = false.
 >	- (unknown and unknown) = unknown.
->- NOT:
+>- `NOT`:
 >	- (not unknown) = unknown.
 >
 >El predicado de una cláusula `WHERE` se trata como falso, si la evaluación es ***unknown***.
 
 Casi todas las funciones de agregación ignoran los valores nulos a la hora de realizar sus cálculos, a excepción de la función `COUNT`. La única forma en la que estas funciones arrojarían un valor nulo es si no exista ningún valor para dicho atributo en todas las tuplas de la tabla.
-### Subconsultas Anidadas
+## Subconsultas Anidadas
 SQL provee un mecanismo para anidar subconsultas. Una subconsulta es una expresión ***select-from-where*** que se anida dentro de otra consulta. Un uso común de subconsultas es llevar a cabo comprobaciones sobre pertenencia a conjuntos, comparación de conjuntos o comparación de valores con un conjunto. 
->[!important] Operadores de Subconsultas
+>[!note] Operadores de Subconsultas
 >Los operadores de subconsultas son un tipo particular de cláusula que se utiliza generalmente en las comparaciones para ver si el valor cumple con ducha condición para la relación resultante de la subconsulta, estos operadores son los siguientes:
 >- `SOME` / `ANY`: Este operador comprueba si algún valor de la relación resultante de la subconsulta satisface la condición de comparación, si esta se cumple para aunque sea un valor, entonces este operador devuelve verdadero.
 >- `ALL`: Comprueba que se satisfaga la condición de comparación para todos los valores de la relación resultante de la subconsulta, en caso de que uno de los valores de dicha relación no cumpla con la condición, el operador devuelve falso.
@@ -122,14 +123,14 @@ SELECT DISTINCT S.nombre_cliente
 					 EXCEPT
 					 SELECT R.nombre_sucursal
 						FROM depositante T, cuentas R
-						WHERE T.numero_cuenta = R.numero_cuenta 
-							 AND S.nombre_cliente = T.nombre_cliente);
+						WHERE T.numero_cuenta = R.numero_cuenta AND
+						      S.nombre_cliente = T.nombre_cliente);
 ```
 
 Para la tercera consulta resulta conveniente explicar un par de cosas. En primer lugar, la subconsulta hace una diferencia de conjuntos entre el nombre de todas las sucursales de Barcelona y el nombre de las sucursales en las cuales el cliente tiene una cuenta, cuando el resultado en vacío significa que el cliente tiene una cuenta en todas las sucursales de Barcelona.
-La segunda parte de la consulta utiliza la cláusula `NOT EXISTS`, con la cual obtenemos un valor verdadero si el resultado de la consulta es vacío. Si el resultado de la subconsulta en vacío, entonces el cliente tiene una cuenta en todas las sucursales de Barcelona. Este tipo de consultas permiten reducir el tamaño y la complejidad de las conjuntas.
-#### Relaciones Derivadas
-Una relación derivada es una subconsultas en la cláusula `FROM`. En este tipo de expresiones se debe asignar un nombre a la relación resultado, pudiendo renombrar, de forma opcional, los atributos de la consulta resultante. Veamos un ejemplo:
+La segunda parte de la consulta utiliza la cláusula `NOT EXISTS`, con la cual se obtiene un valor verdadero si el resultado de la consulta es vacío. Si el resultado de la subconsulta en vacío, entonces el cliente tiene una cuenta en todas las sucursales de Barcelona. Este tipo de consultas permiten reducir el tamaño y la complejidad de las conjuntas.
+### Relaciones Derivadas
+Una relación derivada es una subconsultas en la cláusula `FROM`. En este tipo de expresiones se le debe asignar un nombre a la relación resultado, pudiendo renombrar, de forma opcional, los atributos de la consulta resultante. Veamos un ejemplo:
 ```sql
 SELECT nombre_sucursal, res.saldo_medio
    FROM (SELECT nombre_sucursal, AVG(saldo) AS saldo_medio
@@ -139,13 +140,13 @@ SELECT nombre_sucursal, res.saldo_medio
 ```
 
 En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal ***res*** se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
-### Reunión de Relaciones (JOIN)
+## Reunión de Relaciones (JOIN)
 Las operaciones de reunión toman como entrada dos relaciones y devuelven como resultado otra relación. Los ***tipos de reunión*** definen cómo se tratan las tuplas de cada relación que no encajan con ninguna tupla de la otra relación y la ***condición de reunión*** indica las tuplas pertenecientes a las dos relaciones que encajan y los atributos que se incluyen en el resultado de la reunión.
 Dentro de los tipos de reuniones encontramos a los siguientes tipos:
-- **INNER JOIN**.
-- **LEFT OUTER JOIN**.
-- **RIGHT OUTER JOIN**.
-- **FULL OUTER JOIN**.
+- `INNER JOIN`.
+- `LEFT OUTER JOIN`.
+- `RIGHT OUTER JOIN`.
+- `FULL OUTER JOIN`.
 
 En `SQL` las operaciones de `JOIN` se pueden realizar de dos maneras diferentes, veamos algunos ejemplos:
 ```sql
@@ -161,3 +162,63 @@ La principal diferencia entre la cláusula `ON` y `USING` es que en la primera s
 >[!tldr] Reuniones Naturales
 >Las reuniones naturales en SQL se consiguen a través de la cláusula `NATURAL` que se pone antes del tipo de reunión, de esta forma la reunión se efectuará de acuerdo al atributo en común entre las dos relaciones.
 >Por lo general este tipo de reuniones no son convenientes de usar en la realidad, debido a que cuando se reúnen dos tablas de una aridad alta, puede que existan atributos con el mismo nombre de los cuales no se es consciente, lo que provocaría un resultado inesperado a la hora de realizar la consulta.
+## Modificación de la Base de Datos
+SQL te permite borrar tuplas de las distintas tablas de una base de datos, la forma de realizar este borrado sigue siempre la misma estructura que la de los siguientes ejemplos:
+```sql
+-- Borra todas las cuentas de la sucursal Centro
+DELETE FROM cuenta
+	WHERE nombre_sucursal = 'Centro'
+
+-- Borra todas las cuentas de la sucursales de Concoria
+DELETE FROM cuenta
+	WHERE nombre_sucursal IN (SELECT nombre_sucursal
+								 FROM sucursal
+								 WHERE ciudad_sucursal = 'Concordia');
+```
+
+Para insertar datos en una tabla, existen dos posibles formas de hacerlo, la primera consiste en especificar la tupla que se desea insertar utilizando constantes, y la segunda es formulando una consulta en la cual sus resultados se insertaran en la tabla especificada. En ambos casos el dominio de los atributos que se están insertando deben ser los mismos que el de los atributos definidos en la tabla, además de poseer la misma aridad que dicha tabla. Veamos algunos ejemplos:
+```sql
+-- Se crea una nueva cuenta especificando la tupla a insertar
+INSERT INTO cuenta
+	VALUES('C-5568', 'Centro', 1.200,00);
+
+-- Se crean nuevas cuentas de ahorro con 200 pesos para cada
+-- cliente de la sucursal centro que tenga un prestamo
+INSERT INTO cuenta
+	SELECT nro_cuenta, nombre_sucursal, 200
+		FROM prestamo
+		WHERE nombre_sucursal = 'Centro';
+```
+
+En el caso de que se inserten valores utilizando una consulta, se debe asegurar que dicha consulta termine antes de introducir estos datos en la tabla, porque de lo contrario puede que se introduzcan infinita cantidad de tuplas en la tabla.
+>[!tldr] Inserción de Valores Insuficientes
+>Si no se tiene valores para todas las columnas, en algunos casos estos se pueden omitir, ya que el gestor de la base de datos completará dichos espacios con valores por defecto, también se puede realizar este proceso de forma explícita, por ejemplo:
+>```sql
+>-- El gestor de la base de datos completara el
+>-- valor del atributo "precio"
+>INSERT INTO producto(num_producto, nombre)
+>	VALUE (1, 'Queso');
+>-- Para mayor claridad se puede poner estos
+>-- valores de forma explícita
+>INSERT INTO producto(num_producto, nombre, precio)
+>	VALUES (1, 'Queso', DEFAULT);
+>```
+>Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable que siempre se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado, más aun si se agregan valores nulos o por defecto. Cabe aclarar que en todas las bases de datos el valor por defecto es el `NULL`.
+
+Al igual que la inserción y la eliminación de datos, SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
+```sql
+-- Actualiza el saldo de las cuentas de los clientes, 
+-- sumandole el interes anual del 5%
+UPDATE cuenta
+	SET saldo = saldo * 1.05;
+
+-- Utiliza una sentencia case para definir que aquellos
+-- clientes con un saldo mayor a 10.000 pesos tiene un
+-- interes de 6% en vez del 5%
+UPDATE cuenta
+	SET saldo = CASE
+		WHEN saldo <= 10000
+			THEN saldo * 1.05
+		ELSE saldo * 1.06
+	END;
+```
