--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -1,5 +1,5 @@
 ## Vistas en las Bases de Datos
-Las vistas representa un conjunto de resultados de una consulta predefinida. Funciona como una "ventana" o "vista" de una tabla o combinación de tablas, pero no almacena datos por sí misma. En cambio, genera sus resultados cada vez que se la consulta, basándose en la consulta SQL que la define. Provee un mecanismo para ocultar datos para ciertos usuarios. En el siguiente ejemplo se muestra como se crea una vista en SQL:
+Las vistas representa un conjunto de resultados de una consulta predefinida. Funciona como una “ventana” o “vista” de una tabla o combinación de tablas, pero no almacena datos por sí misma. En cambio, genera sus resultados cada vez que se la consulta, basándose en la consulta SQL que la define. Provee un mecanismo para ocultar datos para ciertos usuarios. En el siguiente ejemplo se muestra como se crea una vista en SQL:
 ```sql
 -- Una vista que contiene el nombre de la sucursal y de
 -- los clientes que tienen una cuenta o un prestamo en
@@ -23,99 +23,37 @@ CREATE VIEW prestamo_sucursal(nombre_sucursal,
 	   FROM prestamo P, sucursal S
 	   WHERE P.nombre_sucursal = S.nombre_sucursal;
 ```
-### Modificación de la Base de Datos
-SQL te permite borrar tuplas de las distintas tablas de una base de datos, la forma de realizar este borrado sigue siempre la misma estructura que la de los siguientes ejemplos:
-```sql
--- Borra todas las cuentas de la sucursal Centro
-DELETE FROM cuenta
-	WHERE nombre_sucursal = 'Centro'
+### Inserciones y Actualizaciones de Datos en las Vistas
+Supongamos que tenemos una vista de nombre *prestamo_sucursal*, la cual posee como atributos el nombre de sucursal y el número de préstamo, ambos atributos de la tabla *préstamo*, el caso de que queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla *préstamo*, debido a que las vistas no almacenan datos.
+El problema surge cuando la vista en la que se quiere introducir los datos está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
+- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o una función de agregación.
 
--- Borra todas las cuentas de la sucursales de Concoria
-DELETE FROM cuenta
-	WHERE nombre_sucursal IN (SELECT nombre_sucursal
-								 FROM sucursal
-								 WHERE ciudad_sucursal = 'Concordia');
-```
-
-En caso de que deseemos insertar datos en una tabla, existen dos posibles formas de hacerlo, la primera consiste en especificar la tupla que se desea insertar utilizando constantes, y la segunda es formulando una consulta en la cual sus resultados se insertaran en la tabla especificada. En ambos casos el dominio de los atributos que se están insertando deben ser los mismos que el de los atributos definidos en la tabla, además de poseer la misma aridad que dicha tabla. Veamos algunos ejemplos:
-```sql
--- Se crea una nueva cuenta especificando la tupla a insertar
-INSERT INTO cuenta
-	VALUES('C-5568', 'Centro', 1.200,00);
-
--- Se crean nuevas cuentas de ahorro con 200 pesos para cada
--- cliente de la sucursal centro que tenga un prestamo
-INSERT INTO cuenta
-	SELECT nro_cuenta, nombre_sucursal, 200
-		FROM prestamo
-		WHERE nombre_sucursal = 'Centro';
-```
-
-En el caso de que se inserten valores utilizando una consulta, se debe asegurar que dicha consulta termine antes de introducir estos datos en la tabla, porque de lo contrario puede que se introduzcan infinita cantidad de tuplas en la tabla.
->[!tldr] Inserción de Valores Insuficientes
->Si no se tiene valores para todas las columnas, en algunos casos estos se pueden omitir, ya que el gestor de la base de datos completará dichos espacios con valores por defecto, también se puede realizar este proceso de forma explícita, por ejemplo:
->```sql
->-- El gestor de la base de datos completara el
->-- valor del atributo "precio"
->INSERT INTO producto(num_producto, nombre)
->	VALUE (1, 'Cheese');
->-- Para mayor claridad se puede poner estos
->-- valores de forma explícita
->INSERT INTO producto(num_producto, nombre, precio)
->	VALUES (1, 'Cheese', DEFAULT);
->```
->Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable que siempre se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado, más aun si se agregan valores nulos o por defecto. Cabe aclarar que en todas las bases de datos el valor por defecto es el `NULL`.
-
-Al igual que la inserción y la eliminación de datos, SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
-```sql
--- Actualiza el saldo de las cuentas de los clientes, 
--- sumandole el interes anual del 5%
-UPDATE cuenta
-	SET saldo = saldo * 1.05;
-
--- Utiliza una sentencia case para definir que aquellos
--- clientes con un saldo mayor a 10.000 pesos tiene un
--- interes de 6% en vez del 5%
-UPDATE cuenta
-	SET saldo = CASE
-		WHEN saldo <= 10000
-			THEN saldo * 1.05
-		ELSE saldo * 1.06
-	END;
-```
-
->[!info] Inserciones y Actualizaciones de Vistas
->Supongamos que tenemos una vista de nombre ***prestamo_sucursal***, la cual posee como atributos el nombre de sucursal y el número de préstamo, ambos atributos de la tabla **préstamo**, el caso de que queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla **préstamo**, debido a que las vistas no almacenan datos, solo son abstracciones de una consulta SQL. Este problema aumenta cuando la vista en la que se quiere introducir el dato está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
->- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o una función de agregación.
->
->En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista ***total_clientes***, dada como ejemplo anteriormente.
->Si bien esto puede lograrse a través de las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, teniendo que actualizar los registros de las respectivas tablas asociadas a dicha vista.
+En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista *total_clientes*, dada como ejemplo anteriormente.
+Si bien esto puede lograrse a través de las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar cualquier tipo de modificación a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, teniendo que actualizar o insertar los registros de las respectivas tablas asociadas a dicha vista.
 ## Integridad en las Bases de Datos
-Las restricciones de integridad garantizan que las modificaciones realizadas en la base de datos por los usuarios autorizados no den lugar a una pérdida de la consistencia de los datos. Por tanto, las restricciones de integridad protegen contra daños accidentales a las bases de datos. Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de integridad no debe depender de las aplicaciones, ya sea la base de datos o el mismo sistema de archivos.
-Las restricciones pueden aplicarse en los siguientes ámbitos:
+Las restricciones de integridad garantizan que las modificaciones realizadas en la base de datos por los usuarios autorizados no den lugar a una pérdida de la consistencia de los datos. Por tanto, las restricciones de integridad protegen contra daños accidentales a las bases de datos.
+Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de integridad no debe depender de las aplicaciones, ya sea la base de datos o el mismo sistema de archivos. Las restricciones pueden aplicarse en los siguientes ámbitos:
 - **Restricciones de Dominio**: La declaración para que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer cualquier valor asignado a una variable cuyo tipo sea el dominio.
-
 >[!tldr] Creación de Dominios Propios
->El estándar de SQL define que el usuario puede definir dominios y asignarlo a distintos atributos en las diferentes tablas de una base de datos, con la particularidad de que también se pueden especificar más restricciones para estos dominios.
+>El estándar SQL permite que el usuario definan sus propios dominios y asignar estos mismos a distintos atributos en las diferentes tablas que componen la base de datos, con la particularidad de que también se pueden especificar más restricciones para estos dominios.
 >SQL permite realizar casteos desde un dominio a otro, siempre y cuando se respeten las reglas bajo las que fue definido dicho dominio. Además, estos dominios pueden ser borrados o alterados al igual que las tablas.
 
 - **Restricciones de Claves**: Existen atributos de las entidades que identifican a unívocamente a cada uno de los datos de una tabla. Los sistemas de gestión de base de datos permite a estos atributos como **claves primarias**, esto asegura que dicho valor no sea nulo.
-- **Restricciones de Integridad Referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una **clave foránea** que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización de la relación a la que hace referencia viola la restricción.
-
+- **Restricciones de Integridad Referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una **clave foránea** que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización en la relación a la que se hace referencia viola la restricción.
 >[!tldr] Consideraciones para la Integridad Referencial
 >- Si hay una cadena de dependencias de claves externas entre varias relaciones, un borrado o una actualización en uno de sus extremos puede propagarse por toda la cadena.
->- Una restricción foreign key de una relación puede hacer referencia a esa misma relación.
+>- Una restricción de clave foránea de una relación puede hacer referencia a esa misma relación.
 >- Si una actualización o borrado en cascada crea una violación a una restricción, la cual no puede resolverse mediante una nueva operación en cascada, el sistema aborta la transacción.
 >- Es conveniente asegurarse de que todas las columnas con especificaciones de clave foránea se declaren como no nulas.
 
-- **Asertos**: Un aserto es un predicado que expresa una condición que se desea que la base de datos satisfaga siempre. Los asertos existen, ya que muchas veces existen restricciones que no se pueden expresar utilizando únicamente restricciones de dominio y las de integridad referencial. Los asertos se crean usando la cláusula `CREATE ASSERTION` y tienen una estructura particular, vamos un ejemplo:
+- **Asertos**: Un aserto es un predicado que expresa una condición que la base de datos debe satisfacer siempre. Los asertos existen, ya que muchas veces existen restricciones que no se pueden expresar utilizando únicamente restricciones de dominio y las de integridad referencial. Los asertos se crean usando la cláusula `CREATE ASSERTION` y tienen una estructura particular, vamos un ejemplo:
 ```sql
 -- La suma de todos lo importes de préstamos de cada
 -- sucursal es menor que la suma de todos los saldos
 -- de las cuentas en dicha sucursal
 CREATE ASSERTION restriccion_suma CHECK
 	(NOT EXISTS (
-		SELECT * 
+		SELECT 1 
 		   FROM sucursal S
 		   WHERE
 			 (SELECT sum(importe) FROM prestamo P
