--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -9,7 +9,7 @@ SQL en su estándar define una serie de dominios nativos que pueden ser utilizad
 - `REAL`, `DOUBLE PRECISION`: Son respectivamente números en coma flotante y números en coma flotante de doble precisión, con precisión dependiente de la máquina.
 - `FLOAT(n)`: Es un número en coma flotante, cuya precisión es de al menos $n$ dígitos.
 - `CREATE DOMAIN`: Es un constructor agregado en SQL-92 que permite crea tipos de dominios definidos por el usuario.
-- `DATE`: Es una fecha del calendario, que contiene un año, un mes y un día del mes, todo esto bajo la representación del formato ISO. Ej. date ‘2001-7-27’
+- `DATE`: Es una fecha del calendario, que contiene un año, un mes y un día del mes, todo esto bajo la representación del formato ISO. Ej.: `DATE ‘2001-7-27’`.
 - `TIME`: Es la hora del día, expresada en horas, minutos y segundos. Se puede usar una variante, `TIME(p)`, para especificar el número de dígitos decimales para los segundos, por defecto este valor está en 0. También es posible almacenar la información del uso horario junto al tiempo.
 - `TIMESTAMP`: Es una combinación de los tipos `DATE` y `TIME`. Se puede usar una variante, `TIMESTAMP(p)`, para especificar el número de dígitos decimales para los segundos, por defecto este número es 6.
 - `INTERVAL`: En un intervalo de tiempo determinado, está constituido por un día, y hora. Por Ej.: **1 12:45:30**, esto se lee como 1 día, 12 horas, 45 minutos y 30 segundos.
@@ -22,7 +22,7 @@ SQL en su estándar define una serie de dominios nativos que pueden ser utilizad
 >EXTRACT (DAY FROM TIMESTAMP '2001-02-16 20:38:40')
 >```
 >- Los valores de intervalo se pueden sumar a los tipos `DATE`, `TIME` y `TIMESTAMP`.
->- Se puede realizar un `CAST` del tipo string a `DATE`, `TIME` y `TIMESTAMP` siempre y cuando se respete el formato de los tipos fecha.
+>- Se puede realizar un `CAST` del tipo string a `DATE`, `TIME` y `TIMESTAMP` siempre y cuando se respete el formato especificado para los tipos fecha.
 ### Definición de Esquemas
 En SQL un esquema relacional se define utilizando la cláusula `CREATE TABLE`, seguido por el nombre de la tabla, para cada tabla especificamos los atributos y el dominio de cada uno de estos atributos, veamos en un ejemplo:
 ```sql
@@ -46,7 +46,7 @@ CREATE TABLE cliente(
 >```
 >Cuando se declara a un campo como clave primaria, el campo se declara automáticamente como `NOT NULL`, ya que así está definido por el estándar.
 
-SQL también te permite borrar tablas y todos los valores que estas contiene, mediante la cláusula `DROP TABLE` seguida del nombre de la tabla. Además, te permite alterar las tablas mediante la cláusula `ALTER TABLE`, esta cláusula te permite agregar nuevos atributos a las tablas, cambiar el tipo de uno o varios atributos e incluso modificar o agregar restricciones de integridad. Veamos algunos ejemplos:
+SQL también te permite borrar tablas mediante la cláusula `DROP TABLE` seguida del nombre de la tabla. Además, permite modificar las tablas mediante la cláusula `ALTER TABLE`, esta cláusula te permite agregar nuevos atributos, cambiar el tipo de dato de uno o varios atributos e incluso modificar o agregar restricciones de integridad. Veamos algunos ejemplos:
 ```sql
 -- Eliminación de un atributo
 ALTER TABLE producto DROP precio_total;
@@ -56,19 +56,19 @@ ALTER TABLE cliente ALTER COLUMN nombre TYPE VARCHAR(100);
 
 -- Agrega una clave foranea que hace referencia a otra tabla
 ALTER TABLE distribuidores ADD CONSTRAINT distribuidores_fk
-	FOREIGN KEY (direccion) REFERENCES direcciones (direccion);
+	FOREIGN KEY (direccion) REFERENCES direcciones(direccion);
 ```
 ### Creación y Definición de Índices
 Los índices en bases de datos sirven para mejorar la eficiencia y el rendimiento de las consultas y operaciones de búsqueda. La eficiencia de estos índices va a variar, ya que en bases de datos muy grandes estos índices no representarían una mejora, en caso incluso empeora el tiempo de respuesta debido a que se debe ordenar los índices nuevamente. Para crear estos índices se usa las cláusulas `CREATE INDEX`, veamos un ejemplo:
 ```sql
-CREATE INDEX idx_sucursal ON sucursal (nombre_sucursal);
+CREATE INDEX idx_sucursal ON sucursal(nombre_sucursal);
 ```
 
+Aunque la sintaxis que se muestra se usa ampliamente y está soportada en muchos sistemas de bases de datos, no es parte de la norma ANSI /SQL.
 >[!tldr] Claves Candidatas en los Índices
 >Si deseamos declarar que la clave de búsqueda es una clave candidata, hay que añadir la cláusula `UNIQUE` a la definición del índice, es decir, si esa clave puede identificar unívocamente cada uno de los elementos de una tabla, el índice debe crearse utilizando la cláusula `UNIQUE`. La declaración del índice se realiza de la siguiente manera:
 >```sql
->CREATE UNIQUE INDEX idx_sucursal ON sucursal (id_sucursal);
+>CREATE UNIQUE INDEX idx_sucursal ON sucursal(id_sucursal);
 >```
 
 Los índices son importantes para el procesamiento eficiente de las transacciones tanto de actualización como de consulta. Cuando se define un atributo o conjunto de atributos como clave primaria, el sistema genere implícitamente un índice sobre esa clave.
-Aunque la sintaxis que se muestra se usa ampliamente y está soportada en muchos sistemas de bases de datos, no es parte de la norma ANSI /SQL.
