--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -22,8 +22,7 @@ Aunque puedan existir varias claves candidatas, solo una de estas se establece c
 >La estructura de la clave primaria para el conjunto de relaciones depende de la correspondencia de cardinalidades asociada al conjunto de relaciones.
 >- Si la relación es de varios a varios, la clave primaria del conjunto de relaciones estará compuesta por en par de 2 o $n$ elementos, cuyos componentes serán las claves primarias de los conjuntos de entidades que participan en la relación.
 ### Conjunto de Entidades Débiles
-Un ***conjunto de entidades débiles*** (CED) es un conjunto de entidades que no tiene suficientes atributos para formar una clave primaria.
-Los conjunto de entidades débiles, deben asociarse con otro conjunto de entidades denominado ***conjunto de entidades identificadoras o propietarias*** (CEI). La relación que asocia el CED con el CEI se denomina ***relación identificadora***.
+Un ***conjunto de entidades débiles*** (CED) es un conjunto de entidades que no tiene suficientes atributos para formar una superclave, por tanto, estos mismos deben asociarse con otro conjunto de entidades denominado ***conjunto de entidades identificadoras o propietarias*** (CEI). La relación que asocia el CED con el CEI se denomina ***relación identificadora***.
 - La relación identificadora es de varios a uno desde el CED al CEI y la participación del CED es total, es decir, tiene cardinalidad $1..^*$.
 
 El ***discriminante*** de un CED, es un conjunto de atributos que permite distinguir todas aquellas entidades del conjunto de entidades que dependen de una entidad fuerte particular. Mientras que la clave primaria de un CED se forma con la clave primaria del CEI, más el discriminante del CED.
