--- a/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
@@ -1,14 +1,13 @@
-Las metas de la normalización es decidir si un esquema de relación $R$ esta en buena forma. En caso de que esto no sea así se divide el esquema en sub-esquemas de la forma $\{R_1, R_2, ... , R_n\}$ tal que, cada sub-esquema de la relación $R$ este en buena forma y la descomposición sea de join sin perdidas. Cabe aclarar que para que la descomposición sea considerada valida se debe verificar que $R_1 \cup R_2 \cup R_n = R$.
+Las metas de la normalización es decidir si un esquema de relación $R$ está en buena forma. En caso de que esto no sea así se divide el esquema en subesquemas de la forma $\{R_1, R_2, ... , R_n\}$ tal que, cada subesquema de la relación $R$ este en buena forma y la descomposición sea de join sin perdidas. Cabe aclarar que para que la descomposición sea considerada válida se debe verificar que $R_1 \cup R_2 \cup R_n = R$.
 >[!tldr] Propiedad del Join Sin Perdidas
->Una descomposición de $R$ en $R_1$ y $R_2$ es Join sin perdidas si al menos una de las siguientes dependencias se encuentra en $F^+$:
->
+>Una descomposición de $R$ en $R_1$ y $R_2$ es join sin perdidas si al menos una de las siguientes dependencias se encuentra en $F^+$:
 >- $R_1 \cap R_2 = R_1$
 >- $R_1 \cap R_2 = R_2$
 >
 >Es decir, $R_1 \cap R_2$ es clave de $R_1$ o es clave de $R_2$.
 
 Al realizar la descomposición de $R$ con un conjunto de dependencias funcionales $F$ en $R_1, R_2, ... , R_n$ se pretende:
-1. Una descomposición de Join sin perdidas.
+1. Una descomposición de join sin perdidas.
 2. No redundancia. El esquema $R_i$ preferentemente debe estar en forma normal de Boyce-Codd o Tercera forma normal.
 3. Preservar dependencias funcionales. Sea $F_i$ el conjunto de dependencias funcionales de $F^+$ que incluye solo atributos de $R_i$.  Una descomposición que preserve las dependencias funcionales es $(F_1 \cup F_2 \cup \cdots \cup F_n)^+ = F^+$. Otra forma de realizar la verificación de las violaciones de las dependencias funcionales es calcular reuniones de relaciones para posteriormente evaluar si sigue cumpliendo las condiciones antes mencionadas.
 
@@ -31,12 +30,11 @@ Un esquema $R$ se encuentra en la forma normal de Boyce-Codd con respecto a un c
 1. $X \rightarrow Y$ es trivial.
 2. $X$ es una superclave para $R$.
 
-Para verificar si una dependencia funcional no trivial $X \rightarrow Y$ causa alguna violación dela forma normal de Boyce-Codd, primero se debe calcular $X^+$ y asegurarse que estén incluidos todos los atributos en $R$, esto nos asegura que $X$ es una superclave de $R$.
+Para verificar si una dependencia funcional no trivial $X \rightarrow Y$ causa alguna violación a la forma normal de Boyce-Codd, primero se debe calcular $X^+$ y asegurarse que estén incluidos todos los atributos en $R$, esto nos asegura que $X$ es una superclave de $R$.
 Este test se puede simplificar, ya que solo basta con chequear aquellas dependencias funcionales de $F$ para las cuales surge una violación de la forma normal, en caso de que ninguna de las dependencias funcionales cause una violación a la forma normal de Boyce-Codd, entonces ninguna dependencia funcional en $F^+$ causará una violación a esta forma normal.
-No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relación en una descomposición de $R$. Por ejemplo dado $R(A, B, C, D)$ con $F = \{ A \rightarrow B, B \rightarrow C\}$, se descompone $R$ en $R_1(A, B)$ y $R_2(A, C, D)$, en este caso ninguna de las dependencias funcionales de $F$ causa una violación a las dependencias y los esquemas parecerías conservar la forma normal de Bayce-Codd, pero si tomamos $F^+$ veremos que se puede inferir $A \rightarrow C$, por lo que $R_2$ violaría las la forma normal de Bayce-Codd y tendría que ser dividida.
+No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una descomposición de $R$. Por ejemplo dado $R(A, B, C, D)$ con $F = \{ A \rightarrow B, B \rightarrow C\}$, se descompone $R$ en $R_1(A, B, D)$ y $R_2(B, C)$, en este caso ninguna de las dependencias funcionales de $F$ causa una violación a las dependencias y los esquemas parecerías conservar la forma normal de Bayce-Codd, pero si tomamos $F^+$ veremos que se puede inferir $A \rightarrow C$, por lo que $R_1$ violaría la forma normal de Bayce-Codd y tendría que ser dividida.
 >[!tldr] Determinación de Claves Candidatas
 >El método para encontrar todas las claves candidatas de una relación, es mediante el cumplimiento de las siguientes condiciones.
->
 >- Siempre serán claves candidatas si:
 >	- Solo aparece en el lado izquierdo de las dependencias funcionales.
 >	- Solo atributos que aparecen en los dominios mínimos.
@@ -57,42 +55,42 @@ Para chequear si un esquema $R_i$ en una descomposición de $R$ está en forma n
 2. Se puede usar el conjunto $F$ original de dependencias funcionales sobre $R$ y testear lo siguiente:
 	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -X) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
 
-No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias. Por ejemplo, consideremos que tenemos un $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, basándonos en esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto, $R$ no está en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
+No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias funcionales. Por ejemplo, dado el esquema $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, basándonos en esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto, $R$ no está en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
 ### Tercera Forma Normal
-Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias y se requiere realizar un chequeo eficiente para corroborar que no se realizó ninguna violación de las dependencias funcionales en alguna actualización.
-La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además, siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preservación de dependencias.
+Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias funcionales y se necesita realizar un chequeo eficiente para corroborar que no se realizó ninguna violación de las dependencias funcionales en alguna actualización.
+La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además, siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preserve las dependencias funcionales.
 Un esquema $R$ está en tercera forma normal si para todo $X \rightarrow Y \in F^+$ se cumple al menos una de las siguientes condiciones:
 - $X \rightarrow Y$ es trivial.
 - $X$ es una superclave para $R$.
-- Cada atributo $A$ en $Y - X$ está contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
+- Cada atributo $A \in Y - X$ está contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
 
 Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además, la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
 >[!example] Ejemplo de Tercera Forma Normal
 >Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y el conjunto $F = \{AB \rightarrow C, C \rightarrow B\}$ de dependencias funcionales, teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una superclave y $B$ forma parte de una clave candidata.
 >Aunque la relación cumple con la tercera forma normal, todavía puede haber alguna redundancia. Por ejemplo, el valor de $B$ puede determinarse tanto directamente a través de $C$ como combinando $A$ y $B$. Esto podría llevar a inconsistencias si no se manejan adecuadamente las actualizaciones. Para evitar esto se puede descomponer $R$ en $R_1 = (A, C)$ y $R_2 = (C, B)$ siguiendo la forma normal de Boyce-Codd, para verificar que la relación original $AB \rightarrow C$ se cumpla para esta descomposición necesitaremos realizar un `JOIN` entre ambos esquemas.
 
-La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
+La ventaja que te brinda la tercera forma normal es que solo se necesita chequear las dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos en cada dependencia funcional $X \rightarrow Y$, si $X$ es una superclave. Si $X$ no resulta ser una superclave, debemos comprobar que cada atributo en $Y$ forme parte de alguna superclave.
+Este método de comprobación es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
 1. Encontrar todas las claves candidatas posibles de acuerdo al conjunto de dependencias funcionales $F$.
 2. Calcular la cobertura canónica $F_C$ para el conjunto de dependencias funcionales $F$, en caso de que esta no sea ya una cobertura canónica.
-3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(XY)$, es decir, se creara una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un conjunto no se deberá crear una nueva relación.
-4. Si alguna de las $R_i$ relaciones contiene al menos a una clave candidata el proceso se detiene y $R$ esta ya en tercera forma normal. En caso contrario se deberá crear una nueva relación $R_i$ que contenga a cualquiera de las claves candidatas.
+3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(X, Y)$, es decir, se creará una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un subesquema entonces no se deberá crear una nueva relación.
+4. Si alguna de las $R_i$ relaciones contiene al menos a una clave candidata el proceso se detiene y $R$ está ya en tercera forma normal. En caso contrario se deberá crear una nueva relación $R_i$ que contenga a cualquiera de las claves candidatas.
 
 >[!tldr] Comparación entre Tercera Forma Normal y Forma Normal de Boyce-Codd
->- Siempre es posible descomponer un esquema en sub-esquemas en tercera forma normal, logrando mantener el join sin perdidas y preservando dependencias.
->- Siempre es posible descomponer un esquema en sub-esquemas en forma normal de Boyce-Codd, logrando mantener el join sin perdidas pero con el inconveniente de que no siempre es posible preservar dependencias.
->- Los esquemas que están en tercera forma normal pero no en la forma normal de Boyce-Codd tienen los siguiente problemas:
+>- Siempre es posible descomponer un esquema en subesquemas en tercera forma normal, logrando mantener el join sin perdidas y preservando las dependencias funcionales.
+>- Siempre es posible descomponer un esquema en subesquemas en forma normal de Boyce-Codd, logrando mantener el join sin perdidas, pero con el inconveniente de que no siempre es posible preservar las dependencias funcionales.
+>- Los esquemas que están en tercera forma normal, pero no en la forma normal de Boyce-Codd tienen los siguientes problemas:
 >	1. Repretición de Información.
->	2. Tienen la necesidad de utilizar valores nulos para representar relaciones donde un valor no fue dado. véase el Ejemplo
+>	2. Tienen la necesidad de utilizar valores nulos para representar relaciones donde un valor no fue dado. Véase la siguiente imagen:
 >
 >![[3NF-BCNF.png]]
 ## Dependencias Multivaluadas
 Sea $R$ un esquema, donde $X \subseteq R$ y $Y \subseteq R$. La dependencia multivaluada $X \rightarrow \rightarrow Y$ se cumple para $R$ si para cualquier relación legal $r(R)$, para todos los pares de tuplas $t_1, \ t_2 \in r$ tal $t_1[X] = t_2[X]$ entonces deberá existir un par de tuplas $t_3, \ t_4 \in r$ tal que:
-
 - $t_1[X] = t_2[X] = t_3[X] = t_4[X]$
 - $t_3[Y] = t_1[Y] \land t_4[Y] = t_2[Y]$
 - $t_3[Z] = t_2[Z] \land t_4[Z] = t_1[Z]$
 
-donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un valor específico en $X$ pueden aparecer con cualquier combinación de valores en $Z$.
+Donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un valor específico en $X$ pueden aparecer con cualquier combinación de valores en $Z$.
 >[!tldr] Join sin Perdida para Dependencias Multivaluadas
 >Dado un esquema de relación $R$, siendo $R_1$ y $R_2$ una descomposición de $R$. Sea $G$ un conjunto de dependencias. La descomposición de $R_1$ y $R_2$ tiene join sin perdidas si se cumple al menos una de las siguientes condiciones:
 >
@@ -101,7 +99,7 @@ donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un val
 >
 >Esto significa que los atributos en la intersección $R_1 \cap R_2$​ deben determinar los atributos que están en $R_1$​ pero no en $R_2$ y viceversa​.
 ### Cuarta Forma Normal
-Un esquema de relación $R$ está en cuarta forma normal con respecto aun conjunto $G$ de dependencias funcionales y dependencias multivaluadas, si para todas las dependencias multivaluadas de $G^+$ de la forma $X \rightarrow \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple algunas de las siguientes condiciones:
+Un esquema de relación $R$ está en cuarta forma normal con respecto a un conjunto $G$ de dependencias funcionales y dependencias multivaluadas, si para todas las dependencias multivaluadas en $G^+$ de la forma $X \rightarrow \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple algunas de las siguientes condiciones:
 1. $X \rightarrow \rightarrow Y$ es trivial, es decir, $Y \subseteq X$ o $X \cup Y = R$.
 2. $X$ es una super clave de $R$.
 
@@ -109,13 +107,13 @@ Un esquema de relación esta en cuarta forma normal, si todas las dependencias n
 Existe un algoritmo que te permite realizar las descomposiciones de los esquemas siguiendo la cuarta forma normal, el algoritmo es el siguiente:
 ![[algoritmo-4NF.png]]
 ### Quinta Forma Normal
-Una tabla se dice que está en quinta forma normal si y solo si está en cuarta forma normal y cada dependencia de reunión (join) en ella es implicada por las claves candidatas.
-La quinta forma normal implica situaciones en donde una relación de tres vias debe ser reemplazada con tres relaciones binarias, y no con dos como sucede con el caso de cuarta forma normal.
+Una tabla se dice que está en quinta forma normal si y solo si está en cuarta forma normal y cada dependencia de reunión en ella es implicada por las claves candidatas. En otras palabras, si se descompone una relación, solo se debe poder volver a unirla correctamente usando sus claves candidatas.
+La quinta forma normal implica situaciones en donde una relación de tres vías debe ser reemplazada con tres relaciones binarias, y no con dos como sucede con el caso de cuarta forma normal.
 ## Metas de Diseño Relacional
-Las metas del diseño para una base de datos relacionales son conseguir la forma normal de Boyce-Codd, los joins sin perdidas y la preservación de dependencias.
-Si no se puede alcanzar eso, se debe elegir entre carecer de las preservación de dependencias y tener problemas de redundancias debido al uso de la tercera forma normal. SQL no provee una forma directa de especificar dependencias funcionales que no sean las super claves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
+Las metas del diseño para una base de datos relacionales son conseguir la forma normal de Boyce-Codd, los join sin perdidas y la preservación de dependencias. Si no se puede alcanzar eso, se debe elegir entre carecer de la preservación de las dependencias funcionales o tener problemas de redundancias debido al uso de la tercera forma normal.
+SQL no provee una forma directa de especificar dependencias funcionales que no sean las superclaves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
 >[!tldr] Testeo de Dependencia Funcionales entre Relaciones
 >Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN` de las relaciones en la descomposición.
->La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
+>La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, esto provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
 
-Generalmente el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$. Este $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ es sub-esquemas.
+Generalmente, el proceso de diseño de una base de datos comienza por el modelo conceptual de este mismo a través de un diagrama de Entidad-Relación, para luego convertir este mismo en tablas, obteniendo así nuestro esquema $R$. Este esquema $R$ puede haber sido una relación simple conteniendo todos los atributos de interés y luego se le aplica normalización descomponiendo $R$ en subesquemas.
